added main pdf to gitignore

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -104,7 +104,7 @@ Dette er hvad der i dag kendes som Fitts lov.
 Siden udgivelsen af Fitts’ artikel, har flere forskere forsøgt at finde en formel, der passer bedre på det motoriske system, end Fitts’ originale lov. Der har indenfor menneske-datamaskine interaktion været flere udgivelser, som mener at have fundet en mere præcis formel end Fitts’ lov, eller som kigger på andre former for eksperimenter. Vi vil i dette afsnit se nærmere på tre sådanne formuleringer.
 
 \addcontentsline{toc}{subsection}{Welfords formel}
-\subsection*{Welford formel}
+\subsection*{Welfords formel}
 
 I \cite{welford1968} beskriver Welford en række fundamentale forudsætninger for det menneskelige motoriske system. Her kiggede han blandt andet på Fitts' lov og de data han indsamlede i sit første forsøg. Han mente at Fitts' lov i princippet gengav den indsamlede data præcist, men han så også tre utilfredsstillende egenskaber, hvilket fik ham til at foreslå følgende modifikationer.
 \begin{figure}[h]
