--- a/latex/main.tex
+++ b/latex/main.tex
@@ -241,34 +241,6 @@ Det drejer sig om følgende dele af vores eksperiment:
 \end{itemize}
 Derudover har vi brugt samme udformning af tunnel- og spiralopgave, som i pegeopgaven. Det vil sige, at vi har samme farver til mål, og samme design af testfladen.
 
-\addcontentsline{toc}{subsection}{Laboratorieeksperiment}
-\subsection*{Laboratorieeksperiment}
-Laboratorieeksperimentet vil blive udført af 10 tilfældigt udvalgte universitetsstuderende - dog ikke dataloger.
-Forsøget foretages fra kl 9-13 - tidligt på dagen - for at sikre, at folk stadig er friske. Det vil foregå i en 4-personers sofabås på H.C. Ørstedsinstituttet, hvor der er privat og uden forstyrrelser.
-Tidsmæssigt vil der være afsat 20 minutter til hver deltager, dog med plads til ekstra tid hvis nødvendigt.
-Hver deltager bliver først introduceret til vores projekt og derefter introduceret til hhv. tunnel-, spiral- og pegeopgaven.
-Herefter bliver testdeltageren bedt om at udføre tunnelopgaven - efterfulgt af spiral- og pegeopgaven - hvor der vil være et antal opgaver som skal udføres, hhv. 4 for tunnelopgaven, 4 for spiralopgaven og 25 for pegeopgaven.
-
-\addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
-\subsection*{Crowdsourcingeksperiment}
-Crowdsourcingeksperimentet vil foregå på internettet, og vi har derfor gjort vores program tilgængeligt online. Ved crowdsourcingeksperimentet vil hver deltager udfylde formularen, som ses i Figur \ref{fig:Questions}, før de kan fortsætte. Når formularen er udfyldt forsætter deltageren til opgaverne. Her skal der, ligesom laboratorieeksperimentet, udføres 4 spiralopgaver, efterfulgt af 4 tunnelopgaver og til sidst 25 pegeopgaver. Efter deltageren har udført alle opgaver vil deres data blive sendt til en server, hvorefter deltageren får en informationsmeddelelse.
-Vi har valgt at dele vores eksperiment på et antal af reddit-sider, da det er et meget populært internetfora, og muliggør at vi kan nå ud til så mange mennesker som overhovedet muligt.
-\begin{itemize}
-\item reddit.com/r/denmark\\
-Vi valgte $/r/denmark$ fordi det er et aktivt subreddit.
-\item reddit.com/r/helpme\\
-\item reddit.com/r/care\\
-Vi valte $/r/helpme$ og $/r/care$, da begge disse subredits er lavet til at spørge folk om hjælp.
-\end{itemize}
-
-Som det sidste vil vi også dele forsøget på vores egne Facebook-profiler.
-\begin{figure}[h]
-\centering
-\includegraphics[scale=0.75]{billeder/Questions.png}
-\caption{Spørgsmål som blev stillet før crowdsourcing-deltagerne kunne udføre forsøget.}
-\label{fig:Questions}
-\end{figure}
-
 \addcontentsline{toc}{section}{Platform og udviklingsværktøj}
 \section*{Platform og udviklingsværktøj}
 Vi har valgt at bruge JavaScript til at udvikle vores forsøg, da vi alle er bekendte med sproget, så vi skal ikke til at sætte os ind i noget nyt. Derudover er det integreret i alle browsere nu om dage, hvilket gør det nemt at crowdsource. For at generere vores opgaver har vi valgt at gøre brug af JavaScript-frameworket $paper.js$. Det gør brug af HTML5 canvas og er bagudkompatibelt til IE9. Frameworket gør det muligt at autogenerere cirkler til vores pegeopgaver, gemme bevægelsesbaner og tegne tunneller, til tunnelopgaverne.
@@ -302,26 +274,46 @@ I alle opgaverne vil deltagerne blive informeret om, hvor mange opgaver de mangl
 \addcontentsline{toc}{chapter}{Eksperimenter}
 \chapter*{Eksperimenter}
 
-\addcontentsline{toc}{section}{Udførsel af eksperimenter}
-\section*{Udførsel af eksperimenter}
+\addcontentsline{toc}{section}{Resultat af eksperimenter}
+\section*{Resultat af eksperimenter}
 
 \addcontentsline{toc}{subsection}{Laboratorieeksperiment}
-\section*{Laboratorieeksperiment}
-Lorem ipsum..
+\subsection*{Laboratorieeksperiment}
+Laboratorieeksperimentet vil blive udført af 10 tilfældigt udvalgte universitetsstuderende - dog ikke dataloger.
+Forsøget foretages fra kl 9-13 - tidligt på dagen - for at sikre, at folk stadig er friske. Det vil foregå i en 4-personers sofabås på H.C. Ørstedsinstituttet, hvor der er privat og uden forstyrrelser.
+Tidsmæssigt vil der være afsat 20 minutter til hver deltager, dog med plads til ekstra tid hvis nødvendigt.
+Hver deltager bliver først introduceret til vores projekt og derefter introduceret til hhv. tunnel-, spiral- og pegeopgaven.
+Herefter bliver testdeltageren bedt om at udføre tunnelopgaven - efterfulgt af spiral- og pegeopgaven - hvor der vil være et antal opgaver som skal udføres, hhv. 4 for tunnelopgaven, 4 for spiralopgaven og 25 for pegeopgaven.
 
 \addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
-\section*{Crowdsourcingeksperiment}
-Lorem ipsum..
+\subsection*{Crowdsourcingeksperiment}
+Crowdsourcingeksperimentet vil foregå på internettet, og vi har derfor gjort vores program tilgængeligt online. Ved crowdsourcingeksperimentet vil hver deltager udfylde formularen, som ses i Figur \ref{fig:Questions}, før de kan fortsætte. Når formularen er udfyldt forsætter deltageren til opgaverne. Her skal der, ligesom laboratorieeksperimentet, udføres 4 spiralopgaver, efterfulgt af 4 tunnelopgaver og til sidst 25 pegeopgaver. Efter deltageren har udført alle opgaver vil deres data blive sendt til en server, hvorefter deltageren får en informationsmeddelelse.
+Vi har valgt at dele vores eksperiment på et antal af reddit-sider, da det er et meget populært internetfora, og muliggør at vi kan nå ud til så mange mennesker som overhovedet muligt.
+\begin{itemize}
+\item reddit.com/r/denmark\\
+Vi valgte $/r/denmark$ fordi det er et aktivt subreddit.
+\item reddit.com/r/helpme\\
+\item reddit.com/r/care\\
+Vi valte $/r/helpme$ og $/r/care$, da begge disse subredits er lavet til at spørge folk om hjælp.
+\end{itemize}
+
+Som det sidste vil vi også dele forsøget på vores egne Facebook-profiler.
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.75]{billeder/Questions.png}
+\caption{Spørgsmål som blev stillet før crowdsourcing-deltagerne kunne udføre forsøget.}
+\label{fig:Questions}
+\end{figure}
 
 \addcontentsline{toc}{section}{Resultat af eksperimenter}
 \section*{Resultat af eksperimenter}
 
 \addcontentsline{toc}{subsection}{Laboratorieeksperiment}
-\section*{Laboratorieeksperiment}
-Vi udførte vores laboratorieeksperiment den 20. april 2015 på H.C. Ørsted instituttet. På trods af, at der på dagen ikke var mange mennesker til stede, så fik vi alligevel 10 personer igennem vores eksperiment i løbet af fire timer. De 10 testdeltagere var af varierende køn og nationalitet. Alle testdeltagere blev hvervet af Rasmus og blev derefter introduceret til eksperimentet af enten Adam eller Alexander. Herefter udførte alle testdeltagere forsøget uden behov for yderlig assistance. Testdeltagerne syntes godt om forsøget. Alt i alt forløb vores forsøg som forventet, uden problemer eller forstyrrelser.
+\subsection*{Laboratorieeksperiment}
+Vi, P1, P2 og P3, udførte vores laboratorieeksperiment den 20. april 2015 på H.C. Ørsted instituttet. På trods af, at der på dagen ikke var mange mennesker til stede, så fik vi alligevel 10 personer igennem vores eksperiment i løbet af fire timer. De 10 testdeltagere var af varierende køn og nationalitet. Alle testdeltagere blev hvervet af P1 og blev derefter introduceret til eksperimentet af enten P2 eller P3. Herefter udførte alle testdeltagere forsøget uden behov for yderlig assistance. Testdeltagerne syntes godt om forsøget. Alt i alt forløb vores forsøg som forventet, uden problemer eller forstyrrelser.
 
 \addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
-\section*{Crowdsourcingeksperiment}
+\subsection*{Crowdsourcingeksperiment}
 Forsøget gik godt - 264 personer gennemførte vores forsøg og har suppleret os med vital data. Vi fik delt vores forsøg på størstedelen af de tidligere beskrevne sider, dog med nogle få undtagelser. Generelt set var reddit det mest lukrative sted, hvorfra 140 personer har skrevet siden på som deres reference - hvorimod 74 skrev at de var blevet refereret fra Facebook.\\
 Det var ikke muligt at dele vores forsøg på $reddit.com/r/helpme$ og $reddit.com/r/care$, da vi ikke havde nok "karma" for at kunne lave et indlæg på disse sites.\\
 Efterfølgende har vi lukket for muligheden for at deltage i vores forsøg den 30/04/2015, og skrevet en besked på forsøgssiden hvor vi takker folk for deres deltagelse.
