--- a/latex/main.tex
+++ b/latex/main.tex
@@ -274,8 +274,8 @@ I alle opgaverne vil deltagerne blive informeret om, hvor mange opgaver de mangl
 \addcontentsline{toc}{chapter}{Eksperimenter}
 \chapter*{Eksperimenter}
 
-\addcontentsline{toc}{section}{Resultat af eksperimenter}
-\section*{Resultat af eksperimenter}
+\addcontentsline{toc}{section}{Udførsel af eksperimenter}
+\section*{Udførsel af eksperimenter}
 
 \addcontentsline{toc}{subsection}{Laboratorieeksperiment}
 \subsection*{Laboratorieeksperiment}
