--- a/latex/main.tex
+++ b/latex/main.tex
@@ -395,9 +395,10 @@ $AIC()$\footnote{R dokumentation om $AIC()$: \url{https://stat.ethz.ch/R-manual/
 
 \addcontentsline{toc}{section}{Modelanalyse}
 \section*{Modelanalyse}
-Vores modelanalyse tager udgangspunkt i AIC-metoden som beskrevet i forrige afsnit, og vi benytter os af de data der er indsamlet ved de 10 testpersoners udførsel af pegeopgaven.
+Vores modelanalyse tager udgangspunkt i AIC-metoden som beskrevet i forrige afsnit, og vi benytter os af de data der er indsamlet ved de 10 testpersoners udførsel af pegeopgaven.\\
+Den relevante R-kode er vist i listing \ref{lst:analyse}.
 
-\lstinputlisting[caption=Modelanalyse i R, language=R, firstline=33, lastline=65]{analyse.r}
+\lstinputlisting[label={lst:analyse}, caption=Modelanalyse i R, language=R, firstline=33, lastline=65]{analyse.r}
 
 \begin{minipage}{\textwidth}
 \centering
