belieber til bibtex

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -393,6 +393,9 @@ Vi har til vores analyse brugt programmeringssproget R, som både har lineær re
 
 $AIC()$\footnote{R dokumentation om $AIC()$: \url{https://stat.ethz.ch/R-manual/R-patched/library/stats/html/AIC.html}} bruger (13) som udgangspunkt til sine beregninger, og tager som input en model, der har metoden $logLik()$\footnote{R dokumentation om $logLik()$: \url{https://stat.ethz.ch/R-manual/R-patched/library/stats/html/logLik.html}}, hvilket $lm()$'s output-modeller har. $lm()$ og $AIC()$ gør det derfor muligt at sammenligne modellerne med R.
 
+\addcontentsline{toc}{section}{Indledende analyse}
+\section*{Indledende analyse}
+
 \addcontentsline{toc}{section}{Modelanalyse}
 \section*{Modelanalyse}
 Vores modelanalyse tager udgangspunkt i AIC-metoden som beskrevet i forrige afsnit, og vi benytter os af de data der er indsamlet ved de 10 testpersoners udførsel af pegeopgaven.\\
