--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -56,7 +56,7 @@
 %\usepackage[backend=biber,style=verbose]{biblatex}
 \usepackage[
     hyperref=auto,
-    backend=biber,
+    backend=bibtex,
     style=alphabetic, %numeric
     citestyle=alphabetic %verboze
 ]{biblatex}
