--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -57,6 +57,7 @@
 \usepackage[
     hyperref=auto,
     backend=bibtex,
+    sorting=ynt,
     style=alphabetic, %numeric
     citestyle=alphabetic %verboze
 ]{biblatex}
