--- a/latex/main.tex
+++ b/latex/main.tex
@@ -403,41 +403,75 @@ Den relevante R-kode er vist i listing \ref{lst:analyse}.
 
 \lstinputlisting[label={lst:analyse}, caption=Modelanalyse i R, language=R, firstline=33, lastline=65]{analyse.r}
 
-\begin{minipage}{\textwidth}
-\centering
-\includegraphics[width=\textwidth]{images/plots/plot_model_fitt}
-\captionof{figure}{Fitt's Model}
-\label{fig:model_fitts}
+
+\addcontentsline{toc}{subsection}{Analyse af Fitt's model}
+\subsection*{Analyse af Fitt's model}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_model_fitt}
+	\captionof{figure}{Fitt's Model}
+	\label{fig:plot_model_fitt}
+\end{minipage}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_qq_fitt}
+	\captionof{figure}{Fitt's QQ-plot}
+	\label{fig:plot_qq_fitt}
 \end{minipage}
 
-\begin{minipage}{\textwidth}
-\centering
-\includegraphics[width=\textwidth]{images/plots/plot_model_welford}
-\captionof{figure}{Welford's Model}
-\label{fig:model_welford}
+\addcontentsline{toc}{subsection}{Analyse af Welford's model}
+\subsection*{Analyse af Welford's model}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_model_welford}
+	\captionof{figure}{Welford's Model}
+	\label{fig:plot_model_welford}
+\end{minipage}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_qq_welford}
+	\captionof{figure}{Welford's QQ-plot}
+	\label{fig:plot_qq_welford}
 \end{minipage}
 
-\begin{minipage}{\textwidth}
-\centering
-\includegraphics[width=\textwidth]{images/plots/plot_model_mackenzie}
-\captionof{figure}{MacKenzie's Model}
-\label{fig:model_mackenzie}
+\addcontentsline{toc}{subsection}{Analyse af MacKenzie's model}
+\subsection*{Analyse af MacKenzie's model}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_model_mackenzie}
+	\captionof{figure}{MacKenzie's Model}
+	\label{fig:plot_model_mackenzie}
+\end{minipage}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_qq_mackenzie}
+	\captionof{figure}{MacKenzie's QQ-plot}
+	\label{fig:plot_qq_mackenzie}
 \end{minipage}
 
-\begin{minipage}{\textwidth}
-\centering
-\includegraphics[width=\textwidth]{images/plots/plot_model_meyer}
-\captionof{figure}{Meyer's Model}
-\label{fig:model_meyer}
+\addcontentsline{toc}{subsection}{Analyse af Meyer's model}
+\subsection*{Analyse af Meyer's model}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_model_meyer}
+	\captionof{figure}{Meyer's Model}
+	\label{fig:plot_model_meyer}
+\end{minipage}
+\begin{minipage}{.5\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_qq_meyer}
+	\captionof{figure}{Meyer's QQ-plot}
+	\label{fig:plot_qq_meyer}
 \end{minipage}
 
-\begin{verbatim}
-                df      AIC
-fitt_model       3 3544.437
-welford_model    2 3587.564
-mackenzie_model  3 3540.466
-meyer_model      3 3534.884
-\end{verbatim}
+\addcontentsline{toc}{subsection}{Sammenligning af modellerne}
+\subsection*{Sammenligning af modellerne}
+\begin{minipage}{\textwidth}
+	\centering
+	\includegraphics[width=.75\textwidth]{images/plots/plot_analyse_aic}
+	\captionof{figure}{AIC Analyse}
+	\label{fig:plot_analyse_aic}
+\end{minipage}
 
 %\addcontentsline{toc}{chapter}{Konklusion}
 %\chapter*{Konklusion}
