--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -155,6 +155,19 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \label{fig:ex_step_7_sending}
 \end{minipage}
 
+\chapter{Testdeltagernes individuelle plots}
+\begin{minipage}{\textwidth}
+\centering
+\includegraphics[height=.2\textheight,width=0.4\textwidth]{images/plots/testperson1}
+\captionof{figure}{Testdeltager 1}
+\label{fig:testdeltager1}
+\includegraphics[width=.25\textheight,width=0.4\textwidth]{images/plots/testperson6}
+\captionof{figure}{Testdeltager 6}
+\label{fig:testdeltager6}
+\includegraphics[width=.25\textheight,width=0.4\textwidth]{images/plots/testperson10}
+\captionof{figure}{Testdeltager 10}
+\label{fig:testdeltager10}
+\end{minipage}
 
 
 
