--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -16,6 +16,7 @@
 \usepackage{url}
 \usepackage{tikz}
 \usepackage{amsfonts}
+\usepackage{lscape}
 \usepackage{graphicx}
 \usepackage[babel]{csquotes}
 \usepackage{capt-of}
